(library
 (name stdune)
 (public_name stdune)
 (synopsis
  "Standard library of Dune.\nThis library offers no backwards compatibility guarantees. Use at your own risk.")
 (libraries
  unix
  csexp
  (re_export ordering)
  (re_export dyn)
  (re_export pp)
  (re_export dune_filesystem_stubs))
 (foreign_stubs
  (language c)
  (names wait3_stubs))
 (instrumentation
  (backend bisect_ppx)))
