(rule
 (with-stdout-to
  c_library_flags.sexp
  (run gen_flags/gen_flags.exe %{os_type})))

(library
 (name xdg)
 (public_name xdg)
 (c_library_flags
  (:include c_library_flags.sexp))
 (foreign_stubs
  (language c)
  (names xdg_stubs))
 (synopsis "[Internal] XDG base directories specification implementation")
 (instrumentation
  (backend bisect_ppx)))
