(include_subdirs unqualified)

(library
 (name dune)
 (libraries unix stdune fiber incremental_cycles dag memo xdg dune_re
   threads.posix opam_file_format dune_lang dune_cache_daemon dune_cache
   dune_glob ocaml_config catapult jbuild_support dune_action_plugin)
 (synopsis "Internal Dune library, do not use!")
 (preprocess future_syntax))

(ocamllex dune_lexer ocamlobjinfo ml_template)

(rule
 (mode promote)
 (target assets.ml)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let jbuild_plugin_ml = {jbp|")
    (cat %{workspace_root}/plugin/jbuild_plugin.ml)
    (echo "|jbp}\n\n")
    (echo "let jbuild_plugin_mli = {jbp|")
    (cat %{workspace_root}/plugin/jbuild_plugin.mli)
    (echo "|jbp}")))))

(rule
 (targets setup.ml)
 (mode fallback)
 (action
  (copy# setup.defaults.ml setup.ml)))
