(library
 (name dune_engine)
 (root_module root)
 (libraries
  unix
  csexp
  stdune
  dyn
  fiber
  memo
  threads.posix
  predicate_lang
  dune_cache
  dune_scheduler
  dune_glob
  dune_targets
  dune_trace
  dune_action_plugin
  dune_util
  build_path_prefix_map
  dune_rpc
  rpc
  dune_digest
  dune_action_trace)
 (synopsis "Internal Dune library, do not use!"))
