(library
 (name dune_lang)
 (synopsis "[Internal] S-expression library")
 (libraries
  stdune
  dune_glob
  dune_rpc_private
  dune_config
  opam_format
  ocaml
  dune_util
  dyn
  ordering
  predicate_lang
  dune_section
  (re_export dune_sexp))
 (instrumentation
  (backend bisect_ppx)))

(ocamllex dune_file_script)
