(include_subdirs unqualified)

(library
 (name dune_lang)
 (synopsis "[Internal] S-expression library")
 (libraries
  stdune
  dune_glob
  dune_rpc_private
  dune_config
  dune_digest
  opam_format
  opam_core
  ocaml
  ;; temporarily here
  dune_engine
  memo
  dune_util
  dyn
  ordering
  predicate_lang
  dune_section
  (re_export dune_sexp)))

(ocamllex dune_file_script)
