(library
 (name dune_pkg)
 (synopsis "[Internal] Dune's packaging support")
 (foreign_stubs
  (names md5_stubs)
  (language c))
 (libraries
  stdune
  lmdb
  fiber
  dune_scheduler
  dune_engine
  dune_util
  dune_trace
  dune_lang
  dune_digest
  re
  dune_vcs
  opam_format
  build_info
  sat
  unix
  xdg))
