(include_subdirs unqualified)

(library
 (name dune_rules)
 (libraries
  action_ext
  build_path_prefix_map
  csexp
  action_plugin
  dune_action_plugin
  dune_config_file
  dune_digest
  dune_engine
  dune_scheduler
  dune_findlib
  dune_glob
  dune_lang
  dune_patch
  dune_pkg
  re
  dune_rpc
  dune_section
  dune_site_private
  dune_targets
  dune_trace
  dune_util
  dune_vcs
  fiber
  fs
  install
  memo
  ocaml
  ocaml_config
  opam_format
  predicate_lang
  scheme
  source
  stdune
  unix
  xdg)
 (synopsis "Internal Dune library, do not use!"))

(ocamllex ocamlobjinfo)

(rule
 (target assets.ml.gen)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let jbuild_plugin_ml = {jbp|\n")
    (cat %{project_root}/plugin/jbuild_plugin.ml)
    (echo "|jbp}\n\n")
    (echo "let jbuild_plugin_mli = {jbp|")
    (cat %{project_root}/plugin/jbuild_plugin.mli)
    (echo "|jbp}")))))

(rule
 (alias check)
 (action
  (diff assets.ml assets.ml.gen)))

(rule
 (targets setup.ml)
 (mode fallback)
 (action
  (copy# setup.defaults.ml setup.ml)))

(rule
 (alias runtest)
 (target setup.defaults.ml.gen)
 (deps
  (:configure %{project_root}/boot/configure.ml))
 (action
  (chdir
   %{project_root}
   (setenv
    DUNE_CONFIGURE_OUTPUT
    "%{target}"
    (run %{ocaml} %{configure})))))

(rule
 (alias runtest)
 (action
  (diff setup.defaults.ml setup.defaults.ml.gen)))
