; OxCaml's ppx_expect v0.18 rejects [let%test_module] in favour of
; [module%test], but upstream ppx_expect has not released v0.18 yet.
; Until it does we must support both: pass the compatibility flag on
; OxCaml and nothing otherwise.

(rule
 (enabled_if %{ocaml-config:ox})
 (action
  (write-file ppx-extra-flags "-inline-test-allow-let-test-module")))

(rule
 (enabled_if
  (not %{ocaml-config:ox}))
 (action
  (write-file ppx-extra-flags "")))

(library
 (name dune_scheduler)
 (library_flags
  (:include flags/sexp))
 (inline_tests
  (deps
   (sandbox always)))
 (preprocess
  (pps ppx_expect -- %{read-lines:ppx-extra-flags}))
 (foreign_stubs
  (language c)
  (names fsevents_stubs fswatch_win_stubs))
 (libraries
  ocaml_inotify
  lev
  spawn
  re
  unix
  csexp
  stdune
  dyn
  fiber
  memo
  threads.posix
  dune_trace
  dune_util)
 (synopsis "Internal Dune library, do not use!"))
